k8s/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # Rewrite the URL path to the root of the backend service
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true" # Force redirect to HTTPS
    nginx.ingress.kubernetes.io/limit-rps: "10" # Limit requests per second to 10

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /demo
        pathType: Prefix # Match all paths starting with "/demo"
        backend:
          service:
            name: demo-service
            port:
              number: 80
